datalist element added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
     <input type="text" >
     <input  type="number">
     <input  type="date">
-    <input  type="email">
+    <input  type="email" placeholder="Email">
+    <input type="password">
+    <select>
+      <optgroup label="Front-end Courses">
+        <option value="">Select the course...</option>
+        <option value="1">html</option>
+        <option value="2">css</option>
+        <option value="3">javascript</option>
+      </optgroup>
+      <optgroup label="Back-end Courses">
+        <option value="1">Python</option>
+        <option value="2">Java</option>
+        <option value="3">Go</option>
+      </optgroup>
+    </select>
   </form>
 </body>
 </html>
