--- a/index.html
+++ b/index.html
@@ -12,24 +12,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 <body>
   <form>
-    <input type="text" >
-    <input  type="number">
-    <input  type="date">
-    <input  type="email" placeholder="Email">
-    <input type="password">
-    <select>
-      <optgroup label="Front-end Courses">
-        <option value="">Select the course...</option>
-        <option value="1">html</option>
-        <option value="2">css</option>
-        <option value="3">javascript</option>
-      </optgroup>
-      <optgroup label="Back-end Courses">
-        <option value="1">Python</option>
-        <option value="2">Java</option>
-        <option value="3">Go</option>
-      </optgroup>
-    </select>
+    <div>
+      <input type="checkbox" id="front-end">
+      <label class="label-inline" for="front-end">Front-end</label>
+    </div>
+    <div>
+      <input type="checkbox" id="back-end">
+      <label class="label-inline" for="back-end">Back-end</label>
+    </div>
   </form>
 </body>
 </html>
