--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 <body>
   <form>
-    <div>
-      <input type="checkbox" id="front-end">
-      <label class="label-inline" for="front-end">Front-end</label>
-    </div>
-    <div>
-      <input type="checkbox" id="back-end">
-      <label class="label-inline" for="back-end">Back-end</label>
-    </div>
+    <!-- <!-- <input type="file" multiple> -->
+    <input type="file" accept=".jpg, .png">
+    <!-- <input type="file" accept="image/*"> -->
+    <!-- <input type="file" accept="videos/*"> -->
+
   </form>
 </body>
 </html>
